<resources>
    <string name="app_name">CEREBOCARE</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="mldp_not_supported">MLDP is not supported</string>
    <string name="label_incoming">Incoming:</string>
    <string name="label_outgoing">Outgoing:</string>
    <string name="label_address">Address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="send">Send</string>
    <string name="send_bulk">Send Bulk</string>
    <string name="clear">Clear</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Lucky Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="text_to_send">Text to send</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_settings">Settings</string>


    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>