<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/datanew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Save"/>
    <Button
        android:id="@+id/atbtn"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="AT"/>
    <Button
        android:id="@+id/atdn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="ATD"/>

    <Button
        android:id="@+id/atokdn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="ATDOK"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_address"
            android:textColor="#bb86fc"
            android:visibility="gone"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status:  "
            android:textColor="#bb86fc"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connectionState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textColor="#d9d9d9"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/progress"
                android:layout_marginBottom="40dp"
                android:layout_width="260dp"
                android:layout_centerHorizontal="true"

                android:layout_centerVertical="true"
                android:layout_height="260dp"/>
            <ImageView
                android:id="@+id/checkiv"
                android:layout_marginBottom="40dp"
                android:layout_width="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/checknew"
                android:layout_centerVertical="true"
                android:layout_height="200dp"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/border_blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_outgoing"
                android:textColor="#d9d9d9"
                android:textSize="24sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/clearOutgoingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />
        </LinearLayout>

        <EditText
            android:id="@+id/outgoingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_send"
            android:inputType="none|text|textMultiLine|textNoSuggestions"
            android:maxLines="10"
            android:textColor="#c38fff"
            android:textColorHint="#c38fff"
            android:scrollbars="vertical"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/border_red"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_incoming"
                android:textColor="#dddddd"
                android:textSize="24sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/clearIncomingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />
        </LinearLayout>

        <TextView
            android:id="@+id/incomingText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#c38fff"
            android:layout_margin="5dp"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
