<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#e6e6e6"
    tools:context=".SendNewDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#121212"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/datanew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Save" />

        <Button
            android:id="@+id/atbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AT"
            android:visibility="gone" />

        <Button
            android:id="@+id/atdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ATD"
            android:visibility="gone" />

        <Button
            android:id="@+id/atokdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ATDOK"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_address"
                android:textColor="#bb86fc"
                android:textSize="18sp"
                android:visibility="gone" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/deviceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status:  "
                android:textColor="#bb86fc"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connectionState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textColor="#d9d9d9"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_centerHorizontal="true"

                    android:layout_centerVertical="true"
                    android:layout_marginBottom="40dp" />

                <ImageView
                    android:id="@+id/checkiv"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/checknew" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_blue"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_outgoing"
                    android:textColor="#d9d9d9"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/clearOutgoingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />
            </LinearLayout>

            <EditText
                android:id="@+id/outgoingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_to_send"
                android:inputType="none|text|textMultiLine|textNoSuggestions"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textColor="#c38fff"
                android:textColorHint="#c38fff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/border_red"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_incoming"
                    android:textColor="#dddddd"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/clearIncomingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />
            </LinearLayout>

            <TextView
                android:id="@+id/incomingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:maxLines="20"
                android:scrollbars="vertical"
                android:textColor="#c38fff"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bghomeicon"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="UPLOAD CONFIGURATION FILE"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="TH 1"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/onevalueet"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="55dp"
                        android:background="@drawable/editboarder"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Low T"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textColorHint="#EEEEEE"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="TH 2"
                        android:gravity="center_horizontal"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/twovalueet"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="55dp"
                        android:background="@drawable/editboarder"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="HT"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textColorHint="#EEEEEE"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="TH 3"
                        android:gravity="center_horizontal"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/threevalueet"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/editboarder"
                        android:layout_marginRight="55dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="High T"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textColorHint="#EEEEEE"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="TH 4"
                        android:gravity="center_horizontal"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/fourvalueet"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/editboarder"
                        android:layout_marginRight="55dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="H1 T"
                        android:textAllCaps="true"
                        android:textColor="#3d4c51"
                        android:textColorHint="#EEEEEE"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/sendbtnnew"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:background="@drawable/editboarder"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="Send Data"
                        android:textAllCaps="true"
                        android:textColor="#0023FF" />


                    <TextView
                        android:id="@+id/historybtnnew"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/editboarder"
                        android:gravity="center"
                        android:text="HISTORY"
                        android:textColor="#0023FF" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>